resize blogs posts on mobile correctly

--- a/src/pages/blog/blog-list/BlogList.module.css
+++ b/src/pages/blog/blog-list/BlogList.module.css
@@ -28,3 +28,12 @@
     margin-bottom: 20px;
     min-height: 475px;
 }
+
+@media (max-width: 700px) {
+    .TwoThirds, .OneThird {
+        width: 100%;
+        margin-right: 0;
+        min-height: 0;
+    }
+}
+
