--- a/src/pages/blog/blog-list/subscribe-form/SubscribeForm.module.css
+++ b/src/pages/blog/blog-list/subscribe-form/SubscribeForm.module.css
@@ -75,3 +75,11 @@
 .CheckIcon {
     margin-left: 7px;
 }
+
+@media (max-width: 700px) {
+    .Container {
+        width: 100%;
+        margin-right: 0;
+        min-height: 0;
+    }
+}
